tests/bad/array_literal_wrong_type.oc
/// fail: Variable foo has type u32[2] but initializer has type str[2]

def main() {
    let foo: [u32; 2] = ["Hello", "World"]
}